--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: flint_client
-description: "Official Dart client for the Flint framework, developed and maintained by Eulogia."
+description: "Official Dart client for the Flint framework, developed and maintained by Eulogia.  A powerful, type-safe HTTP client for Dart with interceptors, caching, retries, and comprehensive error handling."
 version: 1.0.0
 repository: https://github.com/flint-dart/flint-client
 homepage: https://flintdart.eulogia.net
 issue_tracker: https://github.com/flint-dart/flint-client/issues
+example: https://github.com/flint-dart/flint-client-sample
 
 # Prevent accidental publishing to pub.dev (remove if you plan to publish later)
 publish_to: 'none'
