--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
-.dart_tool
+# Ignore the same files as .gitignore but be more specific for pub
+.DS_Store
+.thumbs
+.temporary
+.idea
+.vscode
+*.sublime-*
+*.iml
+*.ipr
+*.iws
+
+# Dart/Flutter specific
+.packages
+.pub-cache
+.pub/
+build/
+doc/api/
+.dart_tool/
+
+# OS generated
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Test and development files
+test/
+example/
+examples/
+benchmark/
+tool/
+
+
+
+# Git
+.git/
+.gitignore
+
+# IDE
+*.swp
+*.swo
+*~
