--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flint_client
-description: "Official Dart client for the Flint framework, developed and maintained by Eulogia.  A powerful, type-safe HTTP client for Dart with interceptors, caching, retries, and comprehensive error handling."
+description: A powerful, type-safe HTTP client for Dart with interceptors, caching, retries, and comprehensive error handling."
 version: 0.0.1
 repository: https://github.com/flint-dart/flint-client
 homepage: https://flintdart.eulogia.net
